# noctalia-greeter

./: CHANGELOG.md  Justfile  README.md  meson.build  meson_options.txt
.github/workflows/: cachix.yml  update-flake.yml
data/tmpfiles.d/: noctalia-greeter.conf
nix/: nixos-module.nix
scripts/: greetd_setup_lib.sh  noctalia-greeter-session  setup_greetd_pam.sh  setup_greeter_system.sh
src/: main.cpp
src/accounts/: accounts_icon.cpp  accounts_icon.h
src/compositor/: noctalia_compositor.c
src/core/: key_modifiers.h  key_symbols.h  log.cpp  log.h
src/greetd/: greetd_client.cpp  greetd_client.h
src/greeter/: appearance_sync.cpp  appearance_sync.h  greetd_user.h  greeter.cpp  greeter.h  greeter_config_io.cpp  greeter_config_io.h  greeter_config_store.h  greeter_preferences.cpp  greeter_preferences.h  greeter_sessions.cpp  greeter_sessions.h  greeter_surface.cpp  greeter_surface.h  logind_resume.cpp  logind_resume.h
src/tools/: apply_appearance_main.cpp
src/ui/controls/: input.cpp  input.h
src/wayland/: wayland_seat.cpp  wayland_seat.h
